Fix scrollbar issue in left drawer.

--- a/content/css/app.less
+++ b/content/css/app.less
@@ -24,6 +24,12 @@
   min-width: 200px;
 }
 
+#left_drawer {
+    .scrollable {
+        overflow: hidden;
+    }
+}
+
 /* note view */
 .note-text {
     height: 5em;
